# ebcustom

./: .ebignore  .env.development  .env.production  .gitignore  Makefile  README.md  cron.yaml  deploy.sh  docker-compose.yml  example.tf  manage.py  package-lock.json  package.json  platform.json  platform.tf  platform.yaml.disabled  playbook.yaml  pyproject.toml  requirements.py  requirements.txt  variables.tf  vue.config.js
.ebextensions/: 01_options.config  02_deploy.config  commands.config  django.config  elasticache.config  options.config
api/: settings.py
backend/backend/: settings.py
builder/: Vagrantfile  webservers.yml
builder/roles/common/tasks/: main.yml
builder/roles/web/files/: ebcustom.conf  nginx.conf
builder/roles/web/tasks/: main.yml
ebcustom/: settings.py  urls.py  wsgi.py
public/: index.html
src/: App.vue
tasks/: serializers.py  urls.py  views.py  viewsets.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: index.html
web/: settings.py  urls.py
