[tool.poetry]
name = "ebcustom"
version = "0.1.0"
description = "An example django application running on an elastic beanstalk custom platform."
authors = ["Hank Ehly <henry.ehly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.10"

[tool.poetry.dev-dependencies]
ansible = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
