[tool.poetry]
name = "ebcustom"
version = "0.1.0"
description = "An example django application running on an elastic beanstalk custom platform."
authors = ["Hank Ehly <henry.ehly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.10"
django-cors-headers = "^3.1"
psycopg2 = "^2.8"
django-redis = "^4.10"

[tool.poetry.dev-dependencies]
toml = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
